add fontsize setting and engine type ? engine type local is not ok

--- a/app/src/main/res/layout/active_main.xml
+++ b/app/src/main/res/layout/active_main.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp">
-        <com.example.liang.ui.DynamicWave
+        <com.example.liang.speechapp.ui.DynamicWave
             android:id="@+id/wave"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
